--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>leader-board</title>
+    <!-- font awsome -->
+    <script src="https://kit.fontawesome.com/2762914b0e.js" crossorigin="anonymous"></script>
     <!--stylesheet-->
     <link rel="stylesheet" href="style.css">
 </head>
@@ -48,6 +50,130 @@
                 </div>
             </div>
             <hr>
+            <div class="top-blogs">
+                <h2 class="section-title">Top Blogs</h2>
+                <div class="blogs">
+                    <article class="blog">
+                        <div class="thambnail">
+                            <img src="images/blog-1.png" alt="">
+                        </div>
+                        <div class="blog-info">
+                            <h3 class="blog-title">13 of My Favorite
+                            UI/UX Goodies</h3>
+                            <p class="blog-author">By <a href="#">Danny Sapio</a></p>
+                        </div>
+                    </article>
+                    <article class="blog">
+                        <div class="thambnail">
+                            <img src="images/blog-2.png" alt="">
+                        </div>
+                        <div class="blog-info">
+                            <h3 class="blog-title">UI cheat sheet:
+                            list vs grids</h3>
+                            <p class="blog-author">By <a href="#">Tess Gadd</a></p>
+                        </div>
+                    </article>
+                    <article class="blog">
+                        <div class="thambnail">
+                            <img src="images/blog-3.png" alt="">
+                        </div>
+                        <div class="blog-info">
+                            <h3 class="blog-title">7 typography tips
+                            for interface design</h3>
+                            <p class="blog-author">By <a href="#">Jeremiah Lam</a></p>
+                        </div>
+                    </article>
+                    <article class="blog">
+                        <div class="thambnail">
+                            <img src="images/blog-4.png" alt="">
+                        </div>
+                        <div class="blog-info">
+                            <h3 class="blog-title">Your logo is
+                            copieds</h3>
+                            <p class="blog-author">By <a href="#">Ferdinand Vogler</a></p>
+                        </div>
+                    </article>
+                </div>
+            </div>
+        </section>
+
+        <!-- latest courses -->
+
+        <section class="container">
+            <h2 class="section-title">Latest Courses</h2>
+            <div class="courses">
+                <article class="course">
+                    <div class="course-banner">
+                        <img src="images/course-1.png" alt="">
+                    </div>
+                    <div class="course-details">
+                        <h3 class="course-title">React - The Complete Guide 2020</h3>
+                        <p class="course-author">Reed Krakoff.</p>
+                    </div>
+                    <div class="course-info">
+                        <div>
+                            <i class="fa-solid fa-star filled"></i>
+                            <i class="fa-solid fa-star filled"></i>
+                            <i class="fa-solid fa-star filled"></i>
+                            <i class="fa-solid fa-star filled"></i>
+                            <i class="fa-solid fa-star empty"></i>
+                            <span>4.5</span>
+                        </div>
+                        <div class="course-duration">
+                            <i class="fa-regular fa-clock"></i>
+                            <span>01:30 hr</span>
+                        </div>
+                    </div>
+                </article>
+
+                <article class="course">
+                    <div class="course-banner">
+                        <img src="images/course-2.png" alt="">
+                    </div>
+                    <div class="course-details">
+                        <h3 class="course-title">Powerpoint 2020 Master Powerpoint Course</h3>
+                        <p class="course-author">Walter Scott.</p>
+                    </div>
+                    <div class="course-info">
+                        <div>
+                            <i class="fa-solid fa-star filled"></i>
+                            <i class="fa-solid fa-star filled"></i>
+                            <i class="fa-solid fa-star filled"></i>
+                            <i class="fa-solid fa-star filled"></i>
+                            <i class="fa-solid fa-star empty"></i>
+                            <span>4.3</span>
+                        </div>
+                        <div class="course-duration">
+                            <i class="fa-regular fa-clock"></i>
+                            <span>01:20 hr</span>
+                        </div>
+                    </div>
+                </article>
+            
+                <article class="course">
+                    <div class="course-banner">
+                        <img src="images/course-3.png" alt="">
+                    </div>
+                    <div class="course-details">
+                        <h3 class="course-title">The Complete JavaScript Course 2020</h3>
+                        <p class="course-author">Reed Krakoff.</p>
+                    </div>
+                    <div class="course-info">
+                        <div>
+                            <i class="fa-solid fa-star filled"></i>
+                            <i class="fa-solid fa-star filled"></i>
+                            <i class="fa-solid fa-star filled"></i>
+                            <i class="fa-solid fa-star filled"></i>
+                            <i class="fa-solid fa-star empty"></i>
+                            <span>4.5</span>
+                        </div>
+                        <div class="course-duration">
+                            <i class="fa-regular fa-clock"></i>
+                            <span>01:30 hr</span>
+                        </div>
+                    </div>
+                </article>
+            </div>
         </section>
     </main>
 </body>
