--- a/index.html
+++ b/index.html
@@ -13,6 +13,21 @@
 <body>
     <!-- header start -->
     <header>
+        <nav class="nav">
+           <div class="menu">
+                <div class="icon">
+                    <img src="./images/icon.png" alt="">
+                    <h3 class="title">Idea</h3>
+                </div>
+                <div>
+                    <ul class="nav-manu">
+                        <li>Home</li>
+                        <li>About</li>
+                        <li>Works</li>
+                    </ul>
+                </div>
+           </div>
+        </nav>
 
     </header>
     <!-- header end -->
